# partreader

./: .gitignore  README.md  pyproject.toml
lambda/: lambda_function.py
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 5fdddf0dc8ff_initial_migration.py  ed15dee52cd3_recreate_vehicle_parts_table.py
src/csv_to_pg/: init_db.py  main.py
src/csv_to_pg/config/: db.py  env.py  logging.py  settings.py
src/csv_to_pg/models/: vehicle_part.py
src/csv_to_pg/routes/: import_route.py
src/csv_to_pg/services/: import_service.py  parse_csv.py  s3_client.py
src/csv_to_pg/utils/: response_codes.py
tests/: conftest.py  test_import_route.py  test_import_service.py  test_parse_csv.py  test_s3_client.py
